:art:feat: add TailwindCss & Custom Login Page:sparkles:

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+img {
+  pointer-events: none;
+}
 td {
-  border-bottom: 2px solid black;  
+  border-bottom: 2px solid black;
+}
+
+.btn {
+  @apply text-xl text-white bg-gray-600 rounded-2xl p-2
 }
